--- a/app/assets/javascripts/users.js.erb
+++ b/app/assets/javascripts/users.js.erb
@@ -7,8 +7,8 @@ const App_Id = 'f6aa03c4';
 function a(){
   alert("val");
   $.ajax({
-          url:'/users/doajax',
-          type:'POST',
+          url:'api/v1/symptoms',
+          type:'GET',
           dataType:'json',
           data:{
               myparam1: "First Param value",
@@ -16,15 +16,31 @@ function a(){
 
           },
           success:function(data){
-              debugger;
+              return(data);
           },
           error:function(data){
               alert("D");
           }
-  });}
+  });
+
+  ;}
+
+  function b(){
+
+    return fetch('https://api.infermedica.com/v2/symptoms', {method: 'GET', headers:{'App_key': '35804b47a103ebdc80ef21be1b1972be', 'App_Id': 'f6aa03c4' }}).then(res=> res.json())
+    .then((x) => {fetch('/api/v1/symptoms', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        }, body: JSON.stringify(x)
+      }).then(res=> res.json())}
+    );
+  }
 
 
-
+  //
+  // .then(() => {return "jkkljkjlkl"})
+  // .then((res) =>
 
   // getAll: function () { ... }
   // 👇 Property Method Shorthand. Syntax sugar for 👆
