--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,14 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>User</h1>
+<p>Find me in </p>
 
 <script>
 function amir(){
-   console.log("DS");
-  // check("c_26");
-  a();
+
+  b();
 }
 </script>
 
-<button onclick="amir()">gfhjd</button>
+
+<button onclick="amir()">Generate SPA</button>
+
+<%= link_to "Symptoms", results_index_path  %>
