--- a/app/assets/javascripts/users.js.erb
+++ b/app/assets/javascripts/users.js.erb
@@ -1,10 +1,17 @@
 
 
-
+function create(ApplicationController){
+  console.log("hh");
+  var x = attr;
+  return fetch('http://localhost:3000/users', {
+  method: 'POST',
+  headers:{'Content-Type': 'application/json'}
+  ,body: JSON.stringify(x)}).then(res=> res.json())
+}
 
   function b(){
 
-    return fetch('https://api.infermedica.com/v2/symptoms', {method: 'GET', headers:{'App_key': '35804b47a103ebdc80ef21be1b1972be', 'App_Id': 'f6aa03c4' }}).then(res=> res.json())
+    return fetch('https://api.infermedica.com/v9/symptoms', {method: 'GET', headers:{'App_key': '35804b47a103ebdc80ef21be1b1972be', 'App_Id': 'f6aa03c4' }}).then(res=> res.json())
     .then((x) => {fetch('/api/v1/symptoms', {
         method: 'POST',
         headers: {
