--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,19 @@
-<h1>User</h1>
+<h1>Useur</h1>
 <p>Find me in </p>
 
 <script>
-function amir(){
+function amir(event){
+ console.log("DS");
+  event.preventDefault();
 
-  b();
+
+      const formData = new FormData(event);
+      debugger;
+      // onSubmit({
+      //   title: formData.get('title'),
+      //   body: formData.get('body')
+      // });
+  create();
 }
 </script>
 
@@ -12,3 +21,17 @@ function amir(){
 <button onclick="amir()">Generate SPA</button>
 
 <%= link_to "Symptoms", results_index_path  %>
+
+<%= form_for @name do |f| %>
+  <div>
+    <%= f.label :name %>
+    <%# f.text_field will generate an `input` html tag with proper
+    `name` attribute which will be `question[title]` in this case. It will
+    also set the value to the input field to whatever Question.new object has
+    preset for that particular attribute (in this case title) %>
+    <%= f.text_field :first_name %>
+  </div>
+
+
+  <%= f.submit %>
+  <% end %>
