add google analytic

--- a/app/assets/javascripts/users.js.erb
+++ b/app/assets/javascripts/users.js.erb
@@ -1,6 +1,6 @@
 
 
-function create(ApplicationController){
+function create(attr){
   console.log("hh");
   var x = attr;
   return fetch('http://localhost:3000/users', {
