--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,21 @@
-<h1>Useur</h1>
-<p>Find me in </p>
+
+
 
 <script>
 function amir(event){
- console.log("DS");
-  event.preventDefault();
 
-
-      const formData = new FormData(event);
-      debugger;
       // onSubmit({
       //   title: formData.get('title'),
       //   body: formData.get('body')
       // });
-  create();
+    // b()
+    create();
 }
 </script>
 
 
-<button onclick="amir()">Generate SPA</button>
+<button onclick="start()">Generate Symptoms</button>
+
 
 <%= link_to "Symptoms", results_index_path  %>
 
