--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,12 +21,18 @@ function amir(event){
 
 <%= form_for @name do |f| %>
   <div>
-    <%= f.label :name %>
     <%# f.text_field will generate an `input` html tag with proper
     `name` attribute which will be `question[title]` in this case. It will
     also set the value to the input field to whatever Question.new object has
     preset for that particular attribute (in this case title) %>
+    <%= f.label :first_name %>
     <%= f.text_field :first_name %>
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
   </div>
 
 
