--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,7 +32,7 @@ function amir(event){
     <%= f.label :email %>
     <%= f.text_field :email %>
     <%= f.label :password %>
-    <%= f.password_field :password_digest %>
+    <%= f.password_field :password %>
   </div>
 
 
