fix symptoms model

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,14 +2,14 @@
 
 
 <script>
-function amir(event){
+function start(event){
 
       // onSubmit({
       //   title: formData.get('title'),
       //   body: formData.get('body')
       // });
-    // b()
-    create();
+     b();
+
 }
 </script>
 
