fetch data from infomedica and save in symptoms

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,8 @@ function start(event){
       //   body: formData.get('body')
       // });
      b();
-
+// b is a funciton in assets/javascript to hit server fetch data from infomedica
+// then pass the results as promise to users controller to be saved with a post method.
 }
 </script>
 
